# Course_Task

./: CMakeLists.txt
doc/: Doxyfile.in
doc/rtf/: refman.rtf
libs/: SFML 2.4.2 (SFML - Download).url
prj/: CMakeLists.txt  CheckBox.h  Menu.cpp  Menu.h  MenuButton.cpp  MenuButton.h  Rollover.h  TopResults.h  asteroid.cpp  asteroid.h  main.cpp  planet.cpp  planet.h  player.cpp  player.h  settings.cpp  settings.h  spawner.cpp  spawner.h  textureLoader.cpp  textureLoader.h  weapon.cpp  weapon.h
src/text/: records.ini  settings.ini
